--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Katyayan Video Stream</title>
+  <title>Local Streaming</title>
 </head>
 <body style="text-align: center; margin-top: 50px;">
   <h1>Welcome to Localstreaming</h1>
